Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24532

AnchorAnimations ignore everything but the default values

XMLWordPrintable

    • 0bf62c44ab5bc53162ef0d7efea38764e2df8318

      In the attached example the easing type and duration are ignored.

      import QtQuick 2.0
      
      Item {
          id: root
          width: 400
          height: 400
      
          Rectangle {
              id: rect
              width: 50
              height: 50
              color: "red"
              anchors.left: parent.left
          }
      
          Timer {
              running: true
              interval: 4000
              repeat: true
              onTriggered: {
                  if( root.state == "" )
                      root.state = "right";
                  else
                      root.state = "";
              }
          }
      
          states: [
              State {
                  name: "right"
                  AnchorChanges {
                      target: rect
                      anchors.left: undefined
                      anchors.right: root.right
                  }
              }
          ]
      
          transitions: [
              Transition {
                  to: "right"
                  reversible: true
                  AnchorAnimation { duration: 3000 ; easing.type: Easing.InElastic}
              }
          ]
      }
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            brasser Michael Brasser (closed Nokia identity) (Inactive)
            designker Nigel Hietala
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes