Correctly set duration and easing for AnchorAnimation.

Task-number: QTBUG-24532
Change-Id: I3aad9cd8281b954896c2c1d44b2dcae68f913928
Reviewed-by: Yunqiao Yin <charles.yin@nokia.com>