src/quick/items/qquickanimation.cpp
@@ -551,6 +551,8 @@ QAbstractAnimationJob* QQuickAnchorAnimation::transition(QDeclarativeStateAction
         delete data;
     }
 
+    animator->setDuration(d->duration);
+    animator->setEasingCurve(d->easing);
     return initInstance(animator);
 }
 
